2006-03-15  William Poetra Yoga Hadisoeseno  <williampoetra@gmail.com>

	* src/data.cc (Frows, Fcolumns): New functions.

	* DLD-FUNCTIONS/time.cc (Fstrptime, Fstrftime): Fix docstring.

	* strfns.cc (Fstrcmp): Fixed docstring.

2006-03-15  John W. Eaton  <jwe@octave.org>

	* pager.cc (Fterminal_size): New function.

	* help.cc (help_from_info): Simplify.
	(try_info): Use feval to call doc instead of executing info program.
	(additional_help_message): Point users to doc instead of help -i.
	From Soren Hauberg <soren@hauberg.org>.

	* toplev.cc (Fsystem): Return output if nargout > 1, not 0.

2006-03-14  Keith Goodman  <kwgoodman@gmail.com>

	* help.cc (Fhelp, Fwhich, Flookfor): Doc string fix.

2006-03-14  John W. Eaton  <jwe@octave.org>

	* defun.cc (print_usage): New arg, extra_msg.
	
	* xpow.cc: Omit tests for now.

	* parse.y (QUOTE, TRANSPOSE): For compatibility, now have same
	precedence as POW and EPOW.

2006-03-14  Bill Denney  <bill@givebillmoney.com>

         * load-save.cc (Fload, Fsave): Update docstring for functional form.

2006-03-14  John W. Eaton  <jwe@octave.org>

	* xpow.cc (elem_xpow): Undo previous change.

2006-03-14  Paul Kienzle  <pkienzle@users.sf.net>

	* xpow.cc: New tests.

2006-03-13  John W. Eaton  <jwe@octave.org>

	* variables.cc (fcn_out_of_date): No longer static.
	* ov-fcn-handle.cc (warn_reload): New function.
	(octave_fcn_handle::subsref): Implement basic logic for updating
	when pointed-to function changes.

2006-03-10  John W. Eaton  <jwe@octave.org>

	* xpow.cc (elem_xpow): Only use complex pow if really necessary.

	* symtab.cc (symbol_table::glob, symbol_table::symbol_list,
	symbol_table::subsymbol_list): Force result to be a column
	vector.

	* oct-stream.h (octave_stream::stream_ok): Undo previous change.
	Eliminate who parameter.  Change all callers.

	* variables.cc (do_who): Return more info in structure array for
	verbose output.
	* symtab.h (symbol_record::size, symbol_record::class_name,